src/test/ui-fulldeps/session-derive-errors.stderr
error: Diagnostic ID multiply provided
  --> $DIR/session-derive-errors.rs:30:1
   |
LL | #[code = "E0456"]
   | ^^^^^^^^^^^^^^^^^

error: no field `name` on this type
  --> $DIR/session-derive-errors.rs:53:5
   |
LL |     #[error = "This error has a field, and references {name}"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The `#[label = ...]` attribute can only be applied to fields of type Span
  --> $DIR/session-derive-errors.rs:70:5
   |
LL |     #[label = "See here"]
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

